bin/testsuite/tests/compiler/src/errors/compiler5028.swg
#global testerror "Err0274"
enum A: u32
{
    Red   = 0
    Green = Swag.U32.Max
    Blue
}
